// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Logo :  renders a snapshot of <Logo /> 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "justifyContent": "center",
      "marginBottom": "10px",
      "padding": "20px 0 10px 0",
    }
  }
>
  <img
    src="[jest.find('../utils')]"
  />
</div>
`;

exports[`Logo :  renders a snapshot of <MobileLogo /> 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "justifyContent": "center",
      "padding": "10px 0",
    }
  }
>
  <img
    src="[jest.find('../utils')]"
  />
</div>
`;
